# exper-borrowed-vs-owned-parameters

./: Cargo.toml  README.md  gen_asm.sh
asm/: boxed_protocol_mf.txt  boxed_protocol_mf_inline_no_suggestion.txt  invoke_boxed_msgmf.txt  invoke_boxed_msgmf_default.txt  invoke_boxed_msgnf.txt  invoke_boxed_msgof.txt  invoke_boxed_msgof_default.txt  invoke_boxed_msgsf.txt  invoke_boxed_msgsf_default.txt  invoke_boxed_protocol_mf.txt  invoke_boxed_protocol_mf_default.txt  invoke_boxed_protocol_mf_inline_always.txt  invoke_boxed_protocol_mf_inline_no_suggestion.txt  invoke_boxed_protocol_nf.txt  invoke_boxed_protocol_nf_default.txt  invoke_boxed_protocol_of.txt  invoke_boxed_protocol_of_default.txt  invoke_boxed_protocol_sf.txt  invoke_boxed_protocol_sf_default.txt  invoke_message_borrowed.txt  invoke_message_borrowed_idx_loop.txt  invoke_message_borrowed_iter_loop.txt  invoke_message_default.txt  invoke_message_owned.txt  invoke_message_owned_idx_loop.txt  invoke_message_owned_iter_loop.txt  invoke_messaged_borrowed.asm  invoke_messaged_borrowed.txt  invoke_messaged_owned.asm  invoke_messaged_owned.txt  invoke_messagemf_borrowed.txt  invoke_messagemf_borrowed2.txt  invoke_messagemf_default.txt  invoke_messagemf_owned.txt  invoke_msgmf_borrowed.txt  invoke_msgmf_default.txt  invoke_msgmf_owned.txt  invoke_msgnf_owned.txt  invoke_msgof_borrowed.txt  invoke_msgof_default.txt  (+28 more)
benches/: bench.rs  crit_bench.rs  iai_bench.rs
src/: lib.rs  main.rs
